--- a/trunk/Samples/Common/bin/plugins.cfg
+++ b/trunk/Samples/Common/bin/plugins.cfg
@@ -10,5 +10,6 @@ Plugin=Plugin_ParticleFX.so
 Plugin=Plugin_BSPSceneManager.so
 Plugin=Plugin_OctreeSceneManager.so
 Plugin=Plugin_GuiElements.so
+Plugin=Plugin_NatureSceneManager.so
 
 
