--- a/trunk/ReferenceApplication/configure.in
+++ b/trunk/ReferenceApplication/configure.in
@@ -27,6 +27,7 @@ fi
 
 dnl Other stuff we need
 AC_CHECK_LIB(OgreMain)
+AC_CHECK_LIB(ode)
 AC_CHECK_LIB(m, pow)
 AC_CHECK_LIB(z, gzopen)
 AC_CHECK_FUNC(snprintf, AC_DEFINE(HAVE_SNPRINTF,,snprintf))
