Modified patch from CUINL to allow objects to be attached to bones on an animating entity.

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -136,6 +136,7 @@ OgreStringResource.h \
 OgreStringVector.h \
 OgreSubEntity.h \
 OgreSubMesh.h \
+OgreTagPoint.h \
 OgreTargetManager.h \
 OgreTGACodec.h \
 OgreTexture.h \
