--- a/trunk/OgreMain/src/Makefile.am
+++ b/trunk/OgreMain/src/Makefile.am
@@ -103,6 +103,7 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          OgreStringVector.cpp \
                          OgreSubEntity.cpp \
                          OgreSubMesh.cpp \
+			 OgreTagPoint.cpp \
                          OgreTGACodec.cpp \
                          OgreTexture.cpp \
                          OgreTextureLayer.cpp \
