--- a/trunk/OgreMain/include/Makefile.am
+++ b/trunk/OgreMain/include/Makefile.am
@@ -61,6 +61,7 @@ OgreLog.h \
 OgreLogManager.h \
 OgreMaterial.h \
 OgreMaterialManager.h \
+OgreMaterialSerializer.h \
 OgreMath.h \
 OgreMatrix3.h \
 OgreMatrix4.h \
