MaterialSerializer introduced (by Cth) for writing materials to scripts

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -61,6 +61,7 @@ OgreLog.h \
 OgreLogManager.h \
 OgreMaterial.h \
 OgreMaterialManager.h \
+OgreMaterialSerializer.h \
 OgreMath.h \
 OgreMatrix3.h \
 OgreMatrix4.h \
