Added SceneQuery to Linux makefiles, fixed a few bugs and added query mask.

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -119,6 +119,7 @@ OgreSDDataChunk.h \
 OgreSceneManager.h \
 OgreSceneManagerEnumerator.h \
 OgreSceneNode.h \
+OgreSceneQuery.h \
 OgreSerializer.h \
 OgreSimpleRenderable.h \
 OgreSimpleSpline.h \
