--- a/trunk/OgreMain/src/Makefile.am
+++ b/trunk/OgreMain/src/Makefile.am
@@ -35,7 +35,8 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          OgreFont.cpp \
                          OgreFontManager.cpp \
                          OgreGuiContainer.cpp \
-                         OgreGuiElement.cpp \
+                         OgreGuiControl.cpp \
+						 OgreGuiElement.cpp \
                          OgreGuiElementCommands.cpp \
                          OgreGuiManager.cpp \
                          OgreImage.cpp \
