Patch from John Ardussi to generally improve the GUI. Including a popup menu control, splitting buttons into bordered / non-bordered types, introducing the GuiControl class, and adding a proper cursor material.

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -42,6 +42,7 @@ OgreFontManager.h \
 OgreFrameListener.h \
 OgreGeometryData.h \
 OgreGuiContainer.h \
+OgreGuiControl.h \
 OgreGuiElement.h \
 OgreGuiElementCommands.h \
 OgreGuiElementFactory.h \
