--- a/PlugIns/GuiElements/include/Makefile.am
+++ b/PlugIns/GuiElements/include/Makefile.am
@@ -1,8 +1,10 @@
 noinst_HEADERS = OgreBorderPanelGuiElement.h \
+		 OgreBorderButtonGuiElement.h \
 		 OgreButtonGuiElement.h \
 		 OgreCursorGuiElement.h \
 		 OgreGuiElementFactories.h \
 		 OgreGuiElementPrerequisites.h \
 		 OgreListGuiElement.h \
 		 OgrePanelGuiElement.h \
+		 OgrePopupMenuGuiElement.h \
 		 OgreTextAreaGuiElement.h 
