--- a/PlugIns/GuiElements/src/Makefile.am
+++ b/PlugIns/GuiElements/src/Makefile.am
@@ -3,11 +3,13 @@ INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/PlugIns/GuiElements/include -I$(top
 pkglib_PROGRAMS = Plugin_GuiElements.so
 
 Plugin_GuiElements_so_SOURCES = OgreBorderPanelGuiElement.cpp \
+				OgreBorderButtonGuiElement.cpp \
 				OgreButtonGuiElement.cpp \
 				OgreCursorGuiElement.cpp \
 				OgreGuiElements.cpp \
 				OgreListGuiElement.cpp \
 				OgrePanelGuiElement.cpp \
+				OgrePopupMenuGuiElement.cpp \
 				OgreTextAreaGuiElement.cpp
 
 Plugin_GuiElements_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_srcdir)/OgreMain/src
