--- a/trunk/OgreMain/include/Makefile.am
+++ b/trunk/OgreMain/include/Makefile.am
@@ -47,6 +47,7 @@ OgreGuiElement.h \
 OgreGuiElementCommands.h \
 OgreGuiElementFactory.h \
 OgreGuiManager.h \
+OgreGuiPressable.h \
 OgreImage.h \
 OgreImageCodec.h \
 OgreInput.h \
