Patch from Traksewt to allow switching between buffered and immediate mode input on demand

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -47,6 +47,7 @@ OgreGuiElement.h \
 OgreGuiElementCommands.h \
 OgreGuiElementFactory.h \
 OgreGuiManager.h \
+OgreGuiPressable.h \
 OgreImage.h \
 OgreImageCodec.h \
 OgreInput.h \
