--- a/RenderSystems/SDL/include/Makefile.am
+++ b/RenderSystems/SDL/include/Makefile.am
@@ -1,4 +1,6 @@
-noinst_HEADERS = OgreSDLRenderSystem.h \
+noinst_HEADERS = OgreSDLExtensionManager.h \
+				 OgreSDLPrerequisites.h \
+                 OgreSDLRenderSystem.h \
                  OgreSDLTexture.h \
                  OgreSDLTextureManager.h \
                  OgreSDLWindow.h
