Patches from eru, tweaked by sinbad (memory leak fixes & VC settings) for: - added Timer class to abstract platform-dependent timing implementations. SDL uses SDL_GetTicks, Windows currently uses clock() still since that seems to be ok but coul dbe replaced with QuertPerformanceCounter if not, so long as Win32Timer class was introduced - fixed bug when texture generation (eg env mapping) was mixed with texture transform (eg scroll)

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -150,6 +150,7 @@ OgreTargetManager.h \
 OgreTGACodec.h \
 OgreTexture.h \
 OgreTextureManager.h \
+OgreTimer.h \
 OgreUserDefinedObject.h \
 OgreVector3.h \
 OgreVertexBoneAssignment.h \
