--- a/PlatformManagers/SDL/include/Makefile.am
+++ b/PlatformManagers/SDL/include/Makefile.am
@@ -1,4 +1,8 @@
-noinst_HEADERS = OgreSDLConfig_cli.h OgreSDLConfig_gtk.h OgreSDLError.h OgreSDLInput.h
+noinst_HEADERS = OgreSDLConfig_cli.h \
+				OgreSDLConfig_gtk.h \
+				OgreSDLError.h \
+				OgreSDLInput.h \
+				OgreSDLTimer.h
 
 all:
 	-rm -f OgreSDLConfig.h
