--- a/trunk/PlugIns/GuiElements/include/Makefile.am
+++ b/trunk/PlugIns/GuiElements/include/Makefile.am
@@ -9,4 +9,5 @@ noinst_HEADERS = OgreBorderPanelGuiElement.h \
 		 OgrePopupMenuGuiElement.h \
 		 OgreScrollBarGuiElement.h \
 		 OgreTextAreaGuiElement.h \
-		 OgreTextBoxGuiElement.h
+		 OgreTextBoxGuiElement.h \
+		 OgreTTYGuiElement.h 
