--- a/trunk/PlugIns/GuiElements/src/Makefile.am
+++ b/trunk/PlugIns/GuiElements/src/Makefile.am
@@ -12,7 +12,8 @@ Plugin_GuiElements_so_SOURCES = OgreBorderPanelGuiElement.cpp \
 				OgrePopupMenuGuiElement.cpp \
 				OgreScrollBarGuiElement.cpp \
 				OgreTextAreaGuiElement.cpp \
-				OgreTextBoxGuiElement.cpp 
+				OgreTextBoxGuiElement.cpp \
+				OgreTTYGuiElement.cpp
 
 Plugin_GuiElements_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_srcdir)/OgreMain/src
 Plugin_GuiElements_so_LDADD = -lOgreMain
