Patch from Silent, adds TTYGuiElement in the GuiElements plugin. This is a general, multiline, appendable text area. Scrollbar is not implemented yet but will be.

--- a/PlugIns/GuiElements/include/Makefile.am
+++ b/PlugIns/GuiElements/include/Makefile.am
@@ -9,4 +9,5 @@ noinst_HEADERS = OgreBorderPanelGuiElement.h \
 		 OgrePopupMenuGuiElement.h \
 		 OgreScrollBarGuiElement.h \
 		 OgreTextAreaGuiElement.h \
-		 OgreTextBoxGuiElement.h
+		 OgreTextBoxGuiElement.h \
+		 OgreTTYGuiElement.h 
