--- a/trunk/Samples/Common/bin/plugins.cfg
+++ b/trunk/Samples/Common/bin/plugins.cfg
@@ -4,7 +4,7 @@
 PluginFolder=/usr/local/lib/OGRE
 
 # Define D3D rendering implementation plugin
-Plugin=RenderSystem_SDL.so
+Plugin=RenderSystem_GL.so
 Plugin=Plugin_FileSystem.so
 Plugin=Plugin_ParticleFX.so
 Plugin=Plugin_BSPSceneManager.so
