--- a/trunk/RenderSystems/GL/include/Makefile.am
+++ b/trunk/RenderSystems/GL/include/Makefile.am
@@ -1,6 +1,8 @@
-noinst_HEADERS = OgreGLRenderSystem.h \
+noinst_HEADERS = OgreGLPrerequisites.h \
+		 OgreGLRenderSystem.h \
                  OgreGLSupport.h \
                  OgreGLTexture.h \
                  OgreGLTextureManager.h \
                  OgreSDLGLSupport.h \
+		 OgreSDLPrerequisites.h \
                  OgreSDLWindow.h
