Changes to temas' GL abstraction: 1. Added correct VC6 & 7 project files 2. Added missing RenderSystem/GL/Makefile.am 3. Made initialisation of GL extensions come after GL context creation, without doing this it bombs on Windows 4. Renamed a couple of Windows files (OgreGLEngine.def, project files) 5. Updated plugins.cfg files for windows to load GL dll

--- a/RenderSystems/GL/include/Makefile.am
+++ b/RenderSystems/GL/include/Makefile.am
@@ -1,6 +1,8 @@
-noinst_HEADERS = OgreGLRenderSystem.h \
+noinst_HEADERS = OgreGLPrerequisites.h \
+		 OgreGLRenderSystem.h \
                  OgreGLSupport.h \
                  OgreGLTexture.h \
                  OgreGLTextureManager.h \
                  OgreSDLGLSupport.h \
+		 OgreSDLPrerequisites.h \
                  OgreSDLWindow.h
