--- a/RenderSystems/GL/src/Makefile.am
+++ b/RenderSystems/GL/src/Makefile.am
@@ -4,6 +4,7 @@ pkglib_PROGRAMS = RenderSystem_GL.so
 
 RenderSystem_GL_so_SOURCES = OgreGLEngineDll.cpp \
                            OgreGLRenderSystem.cpp \
+						   OgreGLSupport.cpp \
                            OgreGLTexture.cpp \
                            OgreGLTextureManager.cpp \
                            OgreSDLGLSupport.cpp \
