--- a/Tools/Makefile.am
+++ b/Tools/Makefile.am
@@ -1,1 +1,6 @@
-SUBDIRS=PythonInterface
+if BUILD_PYTHON_INTERFACE
+PYSUBDIR=PythonInterface
+else
+PYSUBDIR=
+endif
+SUBDIRS=$(PYSUBDIR) XMLConverter
