Added Win32-specific timer subclass using QueryPerformanceCounter, thanks to RoadWarrior for the implementation. Also made it explicit that reset() must be called after creating Timer subclass and removed the call from the Timer constructor, since it was not polymorphic therefore was prone to error. Updated the platform managers to make sure they call reset() before returning the Timer instance to the caller.

--- a/PlatformManagers/Win32/scripts/Attic/PlatformManager_Win32.vcproj
+++ b/PlatformManagers/Win32/scripts/Attic/PlatformManager_Win32.vcproj
@@ -147,6 +147,9 @@
 			<File
 				RelativePath="..\src\OgreWin32PlatformDll.cpp">
 			</File>
+			<File
+				RelativePath="..\src\OgreWin32Timer.cpp">
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -162,6 +165,9 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreWin32Prerequisites.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreWin32Timer.h">
 			</File>
 			<File
 				RelativePath="..\include\resource.h">
