Upated the Linux Makefile.am's for ReferenceApplication

--- a/ReferenceApplication/ReferenceAppLayer/include/Makefile.am
+++ b/ReferenceApplication/ReferenceAppLayer/include/Makefile.am
@@ -1,6 +1,7 @@
 noinst_HEADERS = OgreRefAppApplicationObject.h \
 	OgreRefAppOgreHead.h \
 	OgreRefAppPrerequisites.h \
-        OgreRefAppWorld.h \
+    OgreRefAppWorld.h \
+	OgreRefAppPlane.h \
 	OgreReferenceAppLayer.h
 
