--- a/ReferenceApplication/ReferenceAppLayer/src/Makefile.am
+++ b/ReferenceApplication/ReferenceAppLayer/src/Makefile.am
@@ -4,6 +4,7 @@ lib_LTLIBRARIES=libOgreReferenceAppLayer.la
 
 libOgreReferenceAppLayer_la_SOURCES = OgreRefAppApplicationObject.cpp \
 			OgreRefAppOgreHead.cpp \
+			OgreRefAppPlane.cpp \
 			OgreRefAppWorld.cpp
 
 libOgreReferenceAppLayer_la_LIBADD= -lOgreMain -lode
